relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_specific_selectors.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data)
---
{
  "timestamp": 1544719860.0,
  "trace_id": "5b8efff798038103d269b633813fc60c",
  "span_id": "eee19b7ec3c1b174",
  "level": "info",
  "body": "Test log [[ip]]",
  "attributes": {
    "password.by_value.with.periods": {
      "type": "string",
      "value": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"
    },
    "password.object.with.periods": {
      "type": "string",
      "value": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"
    },
    "password_by_value": {
      "type": "string",
      "value": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"
    },
    "password_object": {
      "type": "string",
      "value": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"
    },
    "secret": {
      "type": "string",
      "value": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"
    }
  },
  "_meta": {
    "body": {
      "": {
        "rem": [
          [
            "@ip:replace",
            "s",
            10,
            14
          ]
        ],
        "len": 20
      }
    }
  }
}
