relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__string_pii_scrubbing_rules-14.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@iban:replace|DE89370400440532013000": {
    "type": "string",
    "value": "[iban]"
  },
  "_meta": {
    "@iban:replace|DE89370400440532013000": {
      "value": {
        "": {
          "rem": [
            [
              "@iban:replace",
              "s",
              0,
              6
            ]
          ],
          "len": 22
        }
      }
    }
  }
}
