relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__string_pii_scrubbing_rules-6.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@email:replace|test@example.com": {
    "type": "string",
    "value": "[email]"
  },
  "_meta": {
    "@email:replace|test@example.com": {
      "value": {
        "": {
          "rem": [
            [
              "@email:replace",
              "s",
              0,
              7
            ]
          ],
          "len": 16
        }
      }
    }
  }
}
